--- a/app/src/main/res/layout/kangwon_list_item.xml
+++ b/app/src/main/res/layout/kangwon_list_item.xml
@@ -30,13 +30,6 @@
                 android:layout_margin="5dp"
                 />
             <TextView
-                android:id="@+id/tv_data_bak_menu_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="백반2"
-                android:layout_margin="5dp"
-                />
-            <TextView
                 android:id="@+id/tv_data_sp_menu_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -83,13 +76,7 @@
                 android:layout_margin="5dp"
                 />
 
-            <TextView
-                android:id="@+id/tv_day"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="요일"
-                android:layout_margin="5dp"
-                />
+
             <TextView
                 android:id="@+id/tv_data_bak_tickets"
                 android:layout_width="wrap_content"
@@ -104,6 +91,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="덮밥판매량"
+                android:layout_margin="5dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_foodwaste"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="음쓰량"
+                android:layout_margin="5dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="요일"
+                android:layout_margin="5dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="년/월/일"
                 android:layout_margin="5dp"
                 />
         </LinearLayout>
