--- a/app/src/main/res/layout/list_item2.xml
+++ b/app/src/main/res/layout/list_item2.xml
@@ -34,9 +34,8 @@
                 android:id="@+id/tv_pw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="pw"
                 android:layout_margin="5dp"
-                />
+                android:text="pw" />
 
             <TextView
                 android:id="@+id/tv_un"
